# acoustic-source-localization

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: eval.yaml  shallow_cnn.yaml  simulator_default.yaml  unet_complex.yaml  unet_magnitude.yaml
notebooks/: 01_explore_simulator.ipynb
scripts/: evaluate_all.py  generate_dataset.py  train_shallow_cnn.py  train_unet_complex.py  train_unet_magnitude.py
src/acoustic_loc/: __init__.py  config.py  dataset.py  evaluate.py  models.py  simulator.py  train.py  utils.py
